--- a/notebooks/play_env.ipynb
+++ b/notebooks/play_env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "id": "19957ac5",
    "metadata": {},
    "outputs": [],
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "6f58dd39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = 'z118s'\n",
+    "model_id = '4a5u7'\n",
     "rand_seed = 1003"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "b0ecc762",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "23daf107",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "ad9cf986",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "a3764a79",
    "metadata": {},
    "outputs": [
@@ -76,12 +76,12 @@
      "output_type": "stream",
      "text": [
       "training_seq_len:  16\n",
-      "embedding_dim:  64\n",
-      "num_attention_heads:  4\n",
-      "intermediate_dim:  128\n",
+      "embedding_dim:  128\n",
+      "num_attention_heads:  8\n",
+      "intermediate_dim:  256\n",
       "hidden_dropout_prob:  0.2\n",
-      "depth:  4\n",
-      "seed:  0\n"
+      "depth:  6\n",
+      "seed:  3\n"
      ]
     }
    ],
@@ -97,20 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "86fc1f24",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No .pth files in c:\\Github\\lunar-transformer-il\\results\\models\\3s28w.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m models \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mlistdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(project_root, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels_baseline_1\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m models:\n\u001b[1;32m----> 3\u001b[0m     checkpoint \u001b[38;5;241m=\u001b[39m \u001b[43mload_checkpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     model_cfg \u001b[38;5;241m=\u001b[39m get_model_cfg_from_checkpoint(checkpoint)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m, model_cfg\u001b[38;5;241m.\u001b[39mdepth, model_cfg\u001b[38;5;241m.\u001b[39mseed)\n",
-      "File \u001b[1;32mc:\\Github\\lunar-transformer-il\\src\\utils\\model_handling.py:60\u001b[0m, in \u001b[0;36mload_checkpoint\u001b[1;34m(model_id)\u001b[0m\n\u001b[0;32m     57\u001b[0m pth_files \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(Path(model_dir)\u001b[38;5;241m.\u001b[39mrglob(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(pth_files):\n\u001b[1;32m---> 60\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo .pth files in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(pth_files) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(pth_files)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m .pth files found in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(project_root,\u001b[38;5;250m \u001b[39mmodel_id)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. The 1st element in the list will be used.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: No .pth files in c:\\Github\\lunar-transformer-il\\results\\models\\3s28w."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model: 187ii,  6 4\n",
+      "model: 4a5u7,  6 3\n",
+      "model: 5f8j7,  6 2\n",
+      "model: b030c,  6 0\n",
+      "model: w5p78,  6 1\n"
      ]
     }
    ],
