some loading fn with option for model location + traning now can eval at epoch end

--- a/notebooks/play_env.ipynb
+++ b/notebooks/play_env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "19957ac5",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,16 @@
     "from src.utils.model_handling import load_model, get_model_device, get_model_dataset, load_checkpoint, get_model_cfg_from_checkpoint\n",
     "from src.utils.visualization import plot_rewards_tep\n",
     "from src.hpo.custom_fitness_functions import evaluate_lander_performance, evaluate_fitness_with_AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "75c690df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '../'))"
    ]
   },
   {
@@ -44,12 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "23daf107",
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), '../'))\n",
     "dataset_name = get_model_dataset(model_id=model_id) # dataset (.pt) file used for training.\n",
     "dataset = torch.load(os.path.join(project_root, 'data', 'processed', dataset_name), weights_only=False)"
    ]
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "86fc1f24",
    "metadata": {},
    "outputs": [
@@ -105,20 +114,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model: 187ii,  6 4\n",
-      "model: 4a5u7,  6 3\n",
-      "model: 5f8j7,  6 2\n",
-      "model: b030c,  6 0\n",
-      "model: w5p78,  6 1\n"
+      "0 model: 187ii,  6 4\n",
+      "1 model: 18lt6,  6 8\n",
+      "2 model: 4a5u7,  6 3\n",
+      "3 model: 5f8j7,  6 2\n",
+      "4 model: 7d2y4,  6 5\n",
+      "5 model: 7q7u1,  6 6\n",
+      "6 model: b030c,  6 0\n",
+      "7 model: p731l,  6 9\n",
+      "8 model: s26e1,  6 7\n",
+      "9 model: w5p78,  6 1\n"
      ]
     }
    ],
    "source": [
     "models = os.listdir(os.path.join(project_root, 'results', 'models'))\n",
-    "for model in models:\n",
+    "for idx, model in enumerate(models):\n",
     "    checkpoint = load_checkpoint(model_id=model)\n",
     "    model_cfg = get_model_cfg_from_checkpoint(checkpoint)\n",
-    "    print(f'model: {model}, ', model_cfg.depth, model_cfg.seed)"
+    "    print(f'{idx} model: {model}, ', model_cfg.depth, model_cfg.seed)"
    ]
   },
   {
