--- a/notebooks/random_seed_sweep.ipynb
+++ b/notebooks/random_seed_sweep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bf5d6fc5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from IPython.display import display, display_html\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
-    "from src.utils.visualization import create_gif_dropdown, get_all_rewards, plot_all_losses\n",
+    "from src.utils.visualization import create_gif_dropdown, get_all_rewards\n",
     "from src.utils.model_handling import load_checkpoint"
    ]
   },
@@ -42,19 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3adbfd9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ec618b598bb40918fd41889eb14447e",
+       "model_id": "49092911abfe4c26b8c9e8975237d795",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Model:', layout=Layout(width='250px'), options=('Select a model...', '3s2…"
+       "VBox(children=(Dropdown(description='Model:', layout=Layout(width='250px'), options=('Select a model...', '08l…"
       ]
      },
      "metadata": {},
@@ -62,25 +62,25 @@
     }
    ],
    "source": [
-    "create_gif_dropdown(models_dir_name='models_architecture_A')"
+    "create_gif_dropdown(models_dir_name='models_architecture_0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "28384cbf",
    "metadata": {},
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'c:\\\\Github\\\\lunar-transformer-il\\\\results\\\\models'",
+     "evalue": "[Errno 2] No such file or directory: '/home/p302242/github/WillianSG/lunar-transformer-il/results/models'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m rewards, env_seeds \u001b[38;5;241m=\u001b[39m \u001b[43mget_all_rewards\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mhist(rewards, bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccumulated reward\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Github\\lunar-transformer-il\\src\\utils\\visualization.py:98\u001b[0m, in \u001b[0;36mget_all_rewards\u001b[1;34m(models_dir_name)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     96\u001b[0m     results_root \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(project_root, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 98\u001b[0m models \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresults_root\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    100\u001b[0m env_seeds \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    101\u001b[0m rewards \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'c:\\\\Github\\\\lunar-transformer-il\\\\results\\\\models'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rewards, env_seeds \u001b[38;5;241m=\u001b[39m \u001b[43mget_all_rewards\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mhist(rewards, bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccumulated reward\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/github/WillianSG/lunar-transformer-il/src/utils/visualization.py:99\u001b[0m, in \u001b[0;36mget_all_rewards\u001b[0;34m(models_dir_name)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     97\u001b[0m     results_root \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(project_root, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 99\u001b[0m models \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresults_root\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    101\u001b[0m env_seeds \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    102\u001b[0m rewards \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/p302242/github/WillianSG/lunar-transformer-il/results/models'"
      ]
     }
    ],
@@ -213,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lunar-transformer-il",
+   "display_name": "noisy_ann",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
