readme update - NNI HPO analysis

--- a/notebooks/compare_datasets.ipynb
+++ b/notebooks/compare_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "07bb819f",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6 320207\n",
       "8 320203\n",
       "10 320197\n",
-      "12 321655\n",
-      "14 320175\n",
-      "16 321636\n",
-      "18 320144\n"
+      "12 321655\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x0000017D1ABF11F0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Work_Software\\envs\\lunar-transformer-il\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 790, in _clean_thread_parent_frames\n",
+      "    active_threads = {thread.ident for thread in threading.enumerate()}\n",
+      "                                                 ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Work_Software\\envs\\lunar-transformer-il\\Lib\\threading.py\", line 1535, in enumerate\n",
+      "    def enumerate():\n",
+      "    \n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 320175\n"
      ]
     }
    ],
    "source": [
-    "seq_len = range(6, 22, 2)\n",
+    "seq_len = range(4, 22, 2)\n",
     "dataset_size = []\n",
     "for sl in seq_len:\n",
     "    train_dataset = torch.load(os.path.join(project_root, 'data', 'processed', f'gymnasium-ActorCritic-LunarLander-1000-{sl}-os.pt'), weights_only=False)\n",
@@ -44,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "91fc78c2",
    "metadata": {},
    "outputs": [
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "741c1b03",
    "metadata": {},
    "outputs": [
